fixes height on safari bug

--- a/src/Layout/Question/Question.scss
+++ b/src/Layout/Question/Question.scss
@@ -72,7 +72,7 @@
 
   .answers {
     position: absolute;
-    bottom: calc(12.5vh + 15px);
+    bottom: calc(10.5vh + 15px);
     list-style: none;
     width: 100%;
     padding: 0;
@@ -125,7 +125,7 @@
 
   .nextBtn {
     position: absolute;
-    bottom: 12.5vh;
+    bottom: 10.5vh;
     right: 8%;
     padding: 8px;
     font-size: 16px;
